array.island.Island.scala.error
Compilation error:
Island:6: error: reassignment to val
  num=list(num)
     ^